--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 </head>
 <body>
   <h1>Shoppisko</h1>
-  <p>firebase db</p>
-  <label for="name">name</label>
-  <input type="text" id="name"></input>
-  <label for="brand">brand</label>
-  <input type="text" id="brand"></input>
-  <label for="price">price</label>
-  <input type="number" id="price"></input>
-  <button id="add">test add</button>
+
   <ul>
     <li>get</li>
     <li>map</li>
     <li>post</li>
+    <div>firebase post
+      <label for="name">name</label>
+      <input type="text" id="name"></input>
+      <label for="brand">brand</label>
+      <input type="text" id="brand"></input>
+      <label for="price">price</label>
+      <input type="number" id="price"></input>
+      <button id="add">test add</button>
+    </div>
     <li>put</li>
     <li>delete</li>
   </ul>
