id hidden print added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       <button id="add">test add</button>
     </div>
     <li>put</li>
-    <li>delete</li>
+    <li>delete</li>   
   </ul>
+  <label for="products-print">Products:</label>
+    <div class="products-box" id="products-print"></div>
 </body>
 </html>
