--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
   <h1>Shoppisko</h1>
 
   <ul>
-    <div>firebase post
+    <div>
+      <p>Add product:</p>
       <label for="name">name</label>
       <input type="text" id="name"></input>
       <label for="brand">brand</label>
       <input type="text" id="brand"></input>
       <label for="price">price</label>
       <input type="number" id="price"></input>
-      <button id="add">test add</button>
+      <label for="quantity">quantity</label>
+      <input type="number" id="quantity"></input>
+      <button id="add">add</button>
     </div>
     <li>put</li>
     <li>delete</li>   
