--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Shoppisko</h1>
 
-  <ul>
+  <div>
     <div>
       <p>Add product:</p>
       <label for="name">name</label>
@@ -24,9 +24,9 @@
       <input type="number" id="quantity"></input>
       <button id="add">add</button>
     </div>
-    <li>put</li>
-    <li>delete</li>   
-  </ul>
+    <p>put</p>
+    <button id="delete">Delete Checked Products</button>   
+  </div>
   <label for="products-print">Products:</label>
     <div class="products-box" id="products-print"></div>
 </body>
