print, add, delete rework!

--- a/index.html
+++ b/index.html
@@ -22,12 +22,50 @@
       <input type="number" id="price"></input>
       <label for="quantity">quantity</label>
       <input type="number" id="quantity"></input>
+      <label for="image">image link</label>
+      <input type="text" id="image"></input>
       <button id="add">add</button>
     </div>
     <p>put</p>
     <button id="delete">Delete Checked Products</button>   
   </div>
   <label for="products-print">Products:</label>
-    <div class="products-box" id="products-print"></div>
+    <ul class="products-list" id="products-print">
+      <!-- products as li are rendered here -->
+    </ul>
+
+    <div class="cart">
+      <div class="cart-header">
+          <div class="column1">Item</div>
+          <div class="column2">Unit price</div>
+          <div class="column3">Units</div>
+      </div>
+      <div class="cart-items">
+          <!-- render cart items here -->
+          <div class="cart-item">
+              <div class="item-info">
+                  <img src="#" alt="t-shirt 1">
+                  <h4>T-shirt 1</h4>
+              </div>
+              <div class="unit-price">
+                  <small>$</small>29.99
+              </div>
+              <div class="units">
+                  <div class="btn minus">-</div>
+                  <div class="number">1</div>
+                  <div class="btn plus">+</div>           
+              </div>
+          </div>
+      </div>
+      <div class="cart-footer">
+          <div class="subtotal">
+              Subtotal (0 items): $0
+          </div>
+          <div class="checkout">
+              Proceed to checkout
+          </div>
+      </div>
+  </div>
+</div>
 </body>
 </html>
