addToCart WIP addBtn query selector corrected

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
-  <script type="module" defer src='main.js'></script>
 </head>
 <body>
   <h1>Shoppisko</h1>
@@ -67,5 +66,6 @@
       </div>
   </div>
 </div>
+<script type="module" src='./main.js'></script>
 </body>
 </html>
