--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
 </head>
 <body>
-  <h1>Shoppisko</h1>
+  <h1>Shopisko</h1>
 
   <div>
     <div>
@@ -34,6 +34,7 @@
     </ul>
 
     <div class="cart">
+      <h3>Cart:</h3>
       <div class="cart-header">
           <div class="column1">Item</div>
           <div class="column2">Unit price</div>
